docs: finish friends
