# src/routes/friends.rs
@@ -5,15 +5,6 @@ use rocket::serde::json::{json, Value};
 use rocket::State;
 use sqlx::postgres::PgPool;
 
-#[post("/friends/<friend_id>")]
-pub async fn create_friend(auth: Auth, friend_id: i32, pool: &State<PgPool>) -> Value {
-    let friend = db::friends::create_one(pool, auth.id, friend_id).await;
-    if let Err(e) = friend {
-        eprintln!("Err creating friend: {}", e);
-    }
-    json!({ "ok": true })
-}
-
 #[get("/friends?<pagination_params..>")]
 pub async fn get_friends(
     auth: Auth,
@@ -28,8 +19,21 @@ pub async fn get_friends(
     json!({ "friends": null })
 }
 
+// TODO: make 201 response
+#[post("/friends/<friend_id>")]
+pub async fn add_friend(auth: Auth, friend_id: i32, pool: &State<PgPool>) -> Value {
+    let res = db::friends::create_one(pool, auth.id, friend_id)
+        .await
+        .map_err(|e| eprintln!("Err creating friend: {}", e))
+        .is_ok();
+    json!({ "ok": res })
+}
+
+// TODO: make 201 response
 #[delete("/friends?<friend_id>")]
 pub async fn delete_friend(auth: Auth, friend_id: i32, pool: &State<PgPool>) -> Value {
-    db::friends::delete_one(pool, auth.id, friend_id).await;
-    json!({ "ok": true })
+    let res = db::friends::delete_one(pool, auth.id, friend_id)
+        .await
+        .is_ok();
+    json!({ "ok": res })
 }
